--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,99 @@
+* {
+  font-family: sans-serif;
+  border-radius: 0px;
+}
+
 body {
+  background-color: hsl(220, 10%, 10%);
+  padding: 0px;
+  text-align: center;
+  overflow: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1 {
+  margin: 0;
+}
+
+.wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5vh;
+  width: 90vw;
+  height: 90vh;
+  display: block;
+}
+
+.pane {
+  border: 1px solid hsl(0, 0%, 33%);
+  width: 100%;
+  position: relative;
+  display: block;
+  text-align: left;
+  margin: 0px;
+  box-sizing: border-box;
+  padding: 10px;
+  margin: 0px;
+}
+
+.main.pane {
+  border: none;
+  display: flex;
+  height: 100%;
+}
+
+.left {
+  width: 34%;
+  height: 100%;
+  display: inline-block;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  padding: 0px;
+}
+
+.build.gear {
+  height: 25%;
+}
+
+.build.consumables {
+  height: 25%;
+}
+
+.build.stats {
+  height: 50%;
+}
+
+.center {
+  width: 33%;
+  height: 100%;
+  display: inline-block;
+  padding: 0px;
+}
+
+.shop,.plan {
+  height: 50%;
+}
+
+.right {
+  width: 33%;
+  height: 100%;
+  display: inline-block;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  padding: 0px;
+}
+
+.map {
+  height: 60%;
+}
+
+.item-add {
+  height: 40%;
 }
 
 code {
